# pvrecorder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/actions/: c-template.yml
.github/actions/c-template/: action.yml
.github/actions/node-sea/: index.js  sea-config.json
.github/workflows/: c-codestyle.yml  c-demo.yml  c.yml  dotnet-codestyle.yml  dotnet-demo.yml  dotnet-demos.yml  dotnet.yml  go-codestyle.yml  go-demos.yml  go.yml  link-check.yml  nodejs-codestyle.yml  nodejs-demos.yml  nodejs.yml  python-codestyle.yml  python-demos.yml  python.yml  rust-codestyle.yml  rust-demos.yml  rust.yml  spell-check.yml
binding/dotnet/: .gitignore  PvRecorder.sln  README.md
binding/dotnet/PvRecorder/: PvRecorder.cs  PvRecorder.csproj  PvRecorder.netstandard2.0.targets  PvRecorder.targets  PvRecorderException.cs  Utils.cs
binding/dotnet/PvRecorderTest/: MainTest.cs  PvRecorderTest.csproj
binding/go/: README.md  copy.sh  go.mod  pv_recorder.go  pv_recorder_native.go  pv_recorder_test.go
binding/go/embedded/lib/mac/arm64/: libpv_recorder.dylib
binding/go/embedded/lib/mac/x86_64/: libpv_recorder.dylib
binding/go/embedded/scripts/: platform.sh
binding/nodejs/: README.md  copy.js  package.json
binding/nodejs/src/: errors.ts  index.ts  platforms.ts  pv_recorder.ts  pv_recorder_status_t.ts
binding/nodejs/test/: pv_recorder.test.ts
binding/python/: .gitignore  README.md  __init__.py  _pvrecorder.py  setup.py  test_pv_recorder.py
binding/rust/: Cargo.toml  README.md  copy.bat  copy.sh
binding/rust/src/: pvrecorder.rs  util.rs
binding/rust/tests/: pvrecorder_tests.rs
demo/c/: CMakeLists.txt  Preload.CMake  README.md  pv_recorder_demo.c
demo/dotnet/: .gitignore  Demo.csproj  PvRecorderDemo.sln  README.md
demo/dotnet/PvRecorderDemo/: PvRecorderDemo.cs  PvRecorderDemo.csproj
demo/go/: README.md  demo.go  go.mod  go.sum
demo/nodejs/: README.md  demo.js  package.json
demo/python/: .gitignore  MANIFEST.in  README.md  demo.py  pv_recorder_demo.py  requirements.txt  setup.py
demo/python/pvrecorderdemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
demo/rust/: .gitignore  Cargo.toml  README.md  demo.rs
demo/rust/src/: main.rs
example/: demo.c
example/rust/: Cargo.toml
example/rust/src/: main.rs
include/: picovoice.h  pv_circular_buffer.h  pv_recorder.h
lib/lib/mac/x86_64/: pv_recorder.node
lib/lib/raspberry-pi/cortex-a76/: pv_recorder.node
lib/lib/raspberry-pi/cortex-a76-aarch64/: pv_recorder.node
lib/lib/windows/amd64/: pv_recorder.node
lib/mac/arm64/: libpv_recorder.dylib
lib/mac/x86_64/: libpv_recorder.dylib
lib/node/beaglebone/: pv_recorder.node
lib/node/jetson/cortex-a57-aarch64/: pv_recorder.node
lib/node/linux/x86_64/: pv_recorder.node
lib/node/mac/arm64/: pv_recorder.node
lib/node/mac/x86_64/: pv_recorder.node
lib/node/raspberry-pi/arm11/: pv_recorder.node
lib/node/raspberry-pi/cortex-a53/: pv_recorder.node
lib/node/raspberry-pi/cortex-a53-aarch64/: pv_recorder.node
lib/node/raspberry-pi/cortex-a7/: pv_recorder.node
lib/node/raspberry-pi/cortex-a72/: pv_recorder.node
lib/node/raspberry-pi/cortex-a72-aarch64/: pv_recorder.node
lib/node/raspberry-pi/cortex-a76/: pv_recorder.node
lib/node/raspberry-pi/cortex-a76-aarch64/: pv_recorder.node
lib/node/windows/amd64/: pv_recorder.node
lib/node/windows/arm64/: pv_recorder.node
node/: CMakeLists.txt  pv_recorder_napi.c
project/: CMakeLists.txt  Preload.CMake  README.md  Toolchain.CMake
project/include/: pv_circular_buffer.h  pv_recorder.h
project/node/: CMakeLists.txt  delayhook.c  pv_recorder_napi.c
project/src/: pv_circular_buffer.c  pv_recorder.c
project/test/: test_helper.h  test_pv_circular_buffer.c  test_pv_recorder.c
resources/.lint/c/: formatter.py
resources/.lint/spell-check/: .cspell.json  dict.txt
resources/spell-check/: .cspell.json  dict.txt
scripts/: platform.bat  platform.sh
sdk/dotnet/: .gitignore  README.md  pvrecorder.sln
sdk/dotnet/Demo/: Demo.cs  Demo.csproj
sdk/dotnet/PvRecorder/: PvRecorder.cs  PvRecorder.csproj  PvRecorder.targets
sdk/dotnet/demo/: Demo.cs  demo.csproj
sdk/dotnet/pvrecorder/: PVRecorder.cs  PVRecorder.targets  pvrecorder.csproj
sdk/go/: README.md  copy.sh  go.mod  pvrecorder.go  pvrecorder_native.go  pvrecorder_posix.go  pvrecorder_windows.go
sdk/go/demo/: demo.go
sdk/go/embedded/lib/mac/arm64/: libpv_recorder.dylib
sdk/go/embedded/lib/mac/x86_64/: libpv_recorder.dylib
sdk/go/embedded/scripts/: platform.bat
sdk/go/lib/mac/x86_64/: libpv_recorder.dylib
sdk/nodejs/: .gitignore  README.md  copy.js  errors.js  index.js  package.json  pv_recorder_status_t.js
sdk/nodejs/demo/: demo.js
sdk/nodejs/src/: pv_recorder.ts
sdk/python/: .gitignore  README.md  __init__.py  demo.py  pvrecorder.py  setup.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: demo.rs
sdk/rust/src/: lib.rs  pvrecorder.rs  util.rs
src/: pv_circular_buffer.c  pv_recorder.c
test/: CMakeLists.txt  pv_circular_buffer_test.c  test_pv_circular_buffer.c
