[package]
name = "pv_recorder"
version = "1.1.1"
edition = "2018"
description = "Rust recorder library for Picovoice"
license = "Apache-2.0"
repository = "https://github.com/Picovoice/pvrecorder"
keywords = [
    "audio",
    "recorder",
]
publish = true
include = [
	".gitignore",
	"build.rs",
	"Cargo.toml",
	"data/",
	"README.md",
	"src/",
]

[lib]
name = "pv_recorder"
path = "src/lib.rs"
crate_type = ["lib"]

[dependencies]
libc = "0.2"
libloading = "0.7"

[dev-dependencies]
hound = "3.4.0"
clap = "2.33.3"
ctrlc = "3.1.9"
